# lean-ebm

./: .gitignore  CLAUDE.md  README.md  agents.md  config.yaml  contrastive.py  ebt.py  langevin.py  main.py  model.py  pyproject.toml  test.ipynb  trainer.py
checkpoints/: energy_based_learning.pth
config/: config.yaml
experiments/: claude_prompt.md
experiments/00_lm_mini_f2f/: next_task.md  open_source_lean4_models.md  prompt_writer_prompt.md
experiments/01_c_py_lean_dataset/: PROMPT.md  README.md
experiments/01_tasks_april7_create_synth_data_for_team/: cc.md  ebm_text_failures.md  gen_lean_prompt.py  literature_review_contrastive.md  literature_review_rl.md  verybench_c_plan.md
experiments/02_ebm_for_text/: README.md  gpt5pro_proposal.md
experiments/research_journal/: Energy Based Models March 14 2026.txt  march_2026.md
ignore/: compare.py
paper_latex/NeurIPS_2026_EBM_Lean/: 01_introduction.tex  02_related_work.tex  03_method.tex  04_experiments.tex  05_conclusion.tex  99_appendix.tex  main.tex  refs.bib
py_src/: SUDOKU_README.md  comparison_ired_vnn.py  train_diffusion.py  train_ebm.py  train_lora_lean4.py  train_mnist.py  train_sudoku.py
py_src/comparison_results/: dense_ired_metrics.txt  vnn_ired_metrics.txt
py_src/config/: conf.yaml  diffusion.yaml  sudoku.yaml  system2conf.yaml
py_src/diffusion/: diff.py
py_src/ebm/: contrastive.py  ebt.py  ired.py  sudoku_ired.py
py_src/envs/: __init__.py  sudoku.py
py_src/ired/: ired.py  main.py  model.py
py_src/lean_ebm/: contrastive.py  ebt.py  ired.py  main.py  model.py  (+1 more)
wandb/: latest-run
(+149 files in other folders)
