[project]
name = "lean-ebm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "opencv-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_src/lean_ebm"]
