[project]
name = "lean-ebm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "torch>=2.10.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "datasets>=3.0.0",
    "trl>=0.12.0",
    "bitsandbytes>=0.44.0",
    "torchvision>=0.25.0",
    "opencv-python>=4.13.0.92",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_src/lean_ebm"]
